# FlowLink

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: 00-master-plan-zh-CN.md  01-prd.md  02-technical-architecture.md  03-module-breakdown.md  04-data-structures.md  05-network-protocol.md  06-local-storage.md  07-project-structure.md  08-mvp-roadmap.md  09-risk-assessment.md  10-v2-v3-evolution.md  11-next-steps.md  12-executable-plan.md  README.md
scripts/: discovery-smoke.ps1  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: discovery_smoke.rs  mac_input_spike.rs  platform_input_smoke.rs  win_input_spike.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: context.rs  lifecycle.rs  mod.rs
src-tauri/src/config/: defaults.rs  mod.rs  validate.rs
src-tauri/src/discovery/: cache.rs  mdns.rs  mod.rs  udp.rs
src-tauri/src/identity/: hostname.rs  keys.rs  mod.rs
src-tauri/src/input/: edge.rs  macos.rs  mod.rs  noop.rs  types.rs  windows.rs
src-tauri/src/network/: connector.rs  framing.rs  heartbeat.rs  listener.rs  mod.rs  reconnect.rs
src-tauri/src/pairing/: code.rs  flow.rs  mod.rs
src-tauri/src/platform/: macos_permissions.rs  mod.rs  windows_permissions.rs
src-tauri/src/protocol/: frame.rs  messages.rs  mod.rs  version.rs
src-tauri/src/session/: controller.rs  mod.rs  state.rs
src-tauri/src/storage/: files.rs  migrations.rs  mod.rs  secret.rs
src-tauri/src/telemetry/: logging.rs  metrics.rs  mod.rs
src-tauri/src/ui_api/: commands.rs  events.rs  mod.rs  models.rs
src-tauri/tests/: app_context_tests.rs  discovery_cache_tests.rs  discovery_event_tests.rs  discovery_mdns_tests.rs  discovery_task_tests.rs  discovery_udp_tests.rs  framing_tests.rs  identity_key_tests.rs  input_platform_tests.rs  noop_input_tests.rs  pairing_code_tests.rs  pairing_tests.rs  protocol_tests.rs  storage_tests.rs  ui_input_error_tests.rs  ui_screen_topology_tests.rs
(+17 files in other folders)
