[package]
name = "flowlink"
version = "0.1.0"
edition = "2021"

[lib]
name = "flowlink"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
bincode = "1"
sha2 = "0.10"
rand = "0.8"
hostname = "0.4"

[dev-dependencies]
tempfile = "3"

